{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 171,
  "lineage": "30682303-34d6-6769-adf5-4ee6a990dbcf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "r100c86",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bc26bf92a90ba04",
            "arn": "arn:aws:ec2:eu-north-1:431800783492:instance/i-0ce84d27bb323bc99",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce84d27bb323bc99",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "r03g16hg",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0221685473b26c067",
            "private_dns": "ip-192-168-10-224.eu-north-1.compute.internal",
            "private_ip": "192.168.10.224",
            "public_ip": "13.48.67.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-005747540e37b2913",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001553f211323ced7",
            "tags": {
              "Name": "Terraform-aws-technix"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06e4ab8613d211b83"
            ]
          },
          "dependencies": [
            "aws_security_group.r03hg16_allow_all",
            "aws_subnet.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "maingw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:431800783492:internet-gateway/igw-0c466f85f5cdc5578",
            "id": "igw-0c466f85f5cdc5578",
            "owner_id": "431800783492",
            "tags": {
              "Name": "igw-vpc-1"
            },
            "vpc_id": "vpc-0478ba5147ce3e7b1"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02c3301b05b73686e",
            "owner_id": "431800783492",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c466f85f5cdc5578",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-stockholm-vpc-1"
            },
            "vpc_id": "vpc-0478ba5147ce3e7b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.maingw1",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076aa28e2034c257f",
            "route_table_id": "rtb-02c3301b05b73686e",
            "subnet_id": "subnet-001553f211323ced7"
          },
          "dependencies": [
            "aws_internet_gateway.maingw1",
            "aws_route_table.r",
            "aws_subnet.main1",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "r03hg16_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:431800783492:security-group/sg-06e4ab8613d211b83",
            "description": "Allow ALL inbound/outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e4ab8613d211b83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH for VM",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "r03hg16_allow_all",
            "name_prefix": null,
            "owner_id": "431800783492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stockholm-vpc-1-allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0478ba5147ce3e7b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3615348487",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06e4ab8613d211b83",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.r03hg16_allow_all",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:431800783492:subnet/subnet-001553f211323ced7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-001553f211323ced7",
            "map_public_ip_on_launch": false,
            "owner_id": "431800783492",
            "tags": {
              "Name": "stockholm-vpc-1-subnet-1"
            },
            "vpc_id": "vpc-0478ba5147ce3e7b1"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:431800783492:vpc/vpc-0478ba5147ce3e7b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-082020d525914125e",
            "default_route_table_id": "rtb-04273db0fa9474f6b",
            "default_security_group_id": "sg-03b1186d2ca4f9652",
            "dhcp_options_id": "dopt-4111ac28",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0478ba5147ce3e7b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04273db0fa9474f6b",
            "owner_id": "431800783492",
            "tags": {
              "Name": "stockholm-vpc-1"
            }
          }
        }
      ]
    }
  ]
}